force-app/main/default/objects/Contact_Email__c/Contact_Email__c.object-meta.xml
<CustomObject>
    <description>Email addresses associated with the contact / user.</description>
    <label>Contact Email</label>
    <nameField>
        <label>Contact Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>