force-app/main/default/objects/Contact_Email__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Emails associated with the contact</description>
    <inlineHelpText>Emails associated with the contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Emails</relationshipLabel>
    <relationshipName>Contact_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>