force-app/main/default/objects/Contact_Email__c/fields/Domain_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Domain_Identifier__c</fullName>
    <description>Unique identifier for this email in the system of record</description>
    <inlineHelpText>Unique identifier for this email in the system of record</inlineHelpText>
    <label>Domain Identifier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>