force-app/main/default/objects/Contact_Email__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email Address</description>
    <inlineHelpText>Email Address</inlineHelpText>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>