force-app/main/default/objects/Contact_Email__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the email within the profile</description>
    <inlineHelpText>Current status of the email within the profile</inlineHelpText>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>