force-app/main/default/objects/Contact_Email__c/fields/Trust_Status__c.field-meta.xml
<CustomField>
    <fullName>Trust_Status__c</fullName>
    <description>Trust Status of the Email</description>
    <inlineHelpText>Trust Status of the Email</inlineHelpText>
    <label>Trust Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>